syntax = "proto3";

option csharp_namespace = "GrpcService";

import "google/protobuf/empty.proto";

package LuCat; //定义包名

//定义服务
service LuCat{
	rpc SuckingCat (google.protobuf.Empty) returns (SuckingCatResult);
}

message SuckingCatResult{
	string message=1;
}